
	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

	Sections headed '[Incompat <version>]' and '[Major <version>]'
	are particularly important.  They describe changes that are
	incompatible with earlier releases or are significantly
	different.

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

-------------------------------------------------------------------------------

	2005-05-31

	* Split up acinclude.m4 into separate files under m4/.

	2005-05-29

	* Refactor charset and unicode functions into charset.[ch],
          convert_charset.[ch], and conver_unicode.[ch]

	* Add configure and runtime options to select charset and/or
	  unicode character conversion:

	  ./configure                   - runtime selection
	  ./configure --enable-unicode  - unicode only
	  ./configure --disable-unicode - charset only

	  bogofilter --unicode=yes      - use unicode conversion
	  bogofilter --unicode=no       - use charset conversion

0.94.13	2005-05-28

	* Minor cleanups to iconv code.

	2005-05-26

	* Fixed buffer sizing problem affecting unicode encoding of
	  long lines.

	* Added '-q' (quiet) option for bogofilter to suppress
	  printing of statistics.

	* Added return code to lookup function to support error
	  retries.

	2005-05-24

	* Fixed compilation problems with --enable-iconv and
	  --enable-russian.  Thanks to Lev Butyrev and Yar Tikhiy for
	  reporting them.

	* Modified configure.ac and added t.query.config.in so
	  t.query.con regression test works with --enable-iconv.

	2005-05-21

	* Efficiency: The SQLite adaptor now creates new databases with an
	  additional index, to reduce CPU time for lookups.
	  You can add the same index to existing databases by typing:

	  sqlite3 ~/.bogofilter/wordlist.db \
	    'CREATE INDEX bfidx ON bogofilter(key,value);'

	2005-05-19

	* Efficiency: The SQLite adaptor now precompiles the common SQL
	  statements with variables, which avoids the need to parse/compile
	  them for every single token we acces, and which avoids the need to