@@ -15,6 +15,8 @@
 
 	2005-05-31
 
+	* Support systems with GNU iconv or separate libiconv.
+
 	* Split up acinclude.m4 into separate files under m4/.
 
 	2005-05-29
